--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- for git hub -->
     <div class="container">
         <h1 class="heading">TO DO LIST</h1>
         <div class="editbox">
